# Generic-Bare-Metal-MCU-Framework

./: .gitignore  CMakeLists.txt  Generic-Bare-Metal-MCU-Framework.code-workspace  README.md
APP/: APP.hpp  MsgDeal.cpp  MsgDeal.hpp  TaskDemo.cpp  TaskDemo.hpp  initialize.cpp  initialize.hpp
Frame/: frame.hpp
Frame/01_mcu/: mcu.h  startup_stm32f429xx.s  stm32f4_flash.ld  stm32f4xx_conf.h  system_stm32f4xx.c
Frame/01_mcu/Libraries/STM32F4xx_StdPeriph_Driver/inc/: stm32f4xx_rcc.h  stm32f4xx_sdio.h
Frame/01_mcu/Libraries/STM32F4xx_StdPeriph_Driver/src/: stm32f4xx_gpio.c  stm32f4xx_sdio.c
Frame/02_hal/: hal.h  hal_adc.c  hal_adc.h  hal_can.c  hal_can.h  hal_clk.c  hal_clk.h  hal_dwt.c  hal_dwt.h  hal_gpio.c  hal_gpio.h  hal_pwm.c  hal_pwm.h  hal_spi.c  hal_spi.h  hal_systick.c  hal_systick.h  hal_timer.c  hal_timer.h  hal_uart.c  hal_uart.h
Frame/03_chip_driver/: chip.h
Frame/04_device_cpp/: dev.hpp  dev_input.cpp  dev_input.hpp  dev_output.cpp  dev_output.hpp  dev_system.cpp  dev_system.hpp
Frame/04_utils_cpp/: ascii_protocol.cpp  ascii_protocol.hpp  endian.c  endian.h  protocol.cpp  protocol.hpp  ring_buffer.hpp  task.cpp  task.hpp  utils.hpp
Frame/05_device_cpp/: dev.hpp  dev_input.cpp  dev_input.hpp  dev_log.cpp  dev_log.hpp  dev_output.cpp  dev_output.hpp  dev_system.cpp  dev_system.hpp  dev_uart.cpp  dev_uart.hpp
Frame/05_scheduler_cpp/: task.cpp  task.hpp
main/: main.cpp
